Move to UrlConnection instead of Apache lib